reference/tests/snapshots/snapshot__run_reference_prql@window-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/window-0.prql
---
SELECT
  orders.*,
  SUM(price) OVER (
    ORDER BY
      day ROWS BETWEEN 2 PRECEDING
      AND CURRENT ROW
  ) AS total_last_3_days,
  SUM(price) OVER (
    PARTITION BY order_month
    ORDER BY
      day
  ) AS monthly_running_total
FROM
  orders
